Добавлены 10 изображений в папку images и обновлён index.html

--- a/index.html
+++ b/index.html
@@ -357,16 +357,9 @@
     let isCanvasReady = false;
 
     const portraitUrls = [
-      'https://via.placeholder.com/256?text=Portrait+1',
-      'https://via.placeholder.com/256?text=Portrait+2',
-      'https://via.placeholder.com/256?text=Portrait+3',
-      'https://via.placeholder.com/256?text=Portrait+4',
-      'https://via.placeholder.com/256?text=Portrait+5',
-      'https://via.placeholder.com/256?text=Portrait+6',
-      'https://via.placeholder.com/256?text=Portrait+7',
-      'https://via.placeholder.com/256?text=Portrait+8',
-      'https://via.placeholder.com/256?text=Portrait+9',
-      'https://via.placeholder.com/256?text=Portrait+10'
+      'images/portrait1.png',
+        'images/portrait2.png',
+        'images/portrait3.png'
     ];
 
     const translations = {
