--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
     }
 
     function updateContinueButtonText() {
-      document.getElementById('continueButton').textContent = language === 'ru' ? 'Продолжить4' : 'Continue';
+      document.getElementById('continueButton').textContent = language === 'ru' ? 'Продолжить / Continue' : 'Continue';
     }
 
     function updateContinueButtonState() {
